Adding support for java21 and use virtual threads to boost speed